# debugproject

./: .gitignore  LICENSE  pyproject.toml  setup.cfg  setup.py
debugproject/: __init__.py  _version.py  foo.py
docs/source/: api.rst  conf.py  index.rst
