[build-system]
requires = [
    "setuptools >=61.0",
    "versioningit ~= 2.0.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = "debugproject"
license = {text = "MIT"}
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "versioningit>=1.1.0",
]


[tool.versioningit.vcs]
method = "git"
match = ["v*"]